// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render default button 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  border: none;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  height: 3.2rem;
  font-size: 1.4rem;
  font-weight: 500;
  background-color: #3D485F;
  border: 0.8rem;
  padding: 0.4rem 3.2rem;
  border-radius: 1.6rem;
}

.c0:hover {
  background-color: #677489;
}

<button
  class="c0"
>
  Save
</button>
`;

exports[`<Button /> should render link button 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  border: none;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  height: 3.2rem;
  font-size: 1.4rem;
  font-weight: 500;
  background-color: #3D485F;
  border: 0.8rem;
  padding: 0.4rem 3.2rem;
  border-radius: 1.6rem;
  background: transparent;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 0;
  font-size: 1.6rem;
  line-height: 2.8rem;
  font-weight: 500;
  color: #3D485F;
}

.c0:hover {
  background-color: #677489;
}

.c0:hover {
  background-color: transparent;
  color: #677489;
}

<button
  class="c0"
>
  Save
</button>
`;
